vivado/lidar_arm_control/freertos_system/freertos_system.sdk/.metadata/.plugins/org.eclipse.cdt.ui/helloworld_rtos.build.log
09:34:23 **** Auto Build of configuration Debug for project helloworld_rtos ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/freertos_hello_world.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/freertos_hello_world.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../helloworld_rtos_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/freertos_hello_world.d" -MT"src/freertos_hello_world.o" -o "src/freertos_hello_world.o" "../src/freertos_hello_world.c"
../src/freertos_hello_world.c:259:1: error: expected identifier or '(' before '{' token
 {
 ^
../src/freertos_hello_world.c: In function 'TmrCtrPwmConfig':
../src/freertos_hello_world.c:938:6: warning: variable 'DutyCycle' set but not used [-Wunused-but-set-variable]
  u8  DutyCycle;
      ^~~~~~~~~
src/subdir.mk:21: recipe for target 'src/freertos_hello_world.o' failed
make: *** [src/freertos_hello_world.o] Error 1

09:34:23 Build Finished (took 145ms)

